add feret diameters

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "33031c46",
    "metadata": {},
    "outputs": [],
@@ -23,6 +23,7 @@
     "\n",
     "from topostats.plottingfuncs import Colormap\n",
     "from topostats.tracing.splining import windowTrace\n",
+    "from topostats.measure.feret import get_feret_from_mask\n",
     "\n",
     "colormap = Colormap()\n",
     "CMAP = colormap.get_cmap()\n",
@@ -277,6 +278,41 @@
     "        save_path=save_dirs[sample_type] / f\"grains_with_smoothed_paths_{sample_type}.png\",\n",
     "        show_plot=False,\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5cefb1d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculate the feret diameter for each grain\n",
+    "grains_dicts_feret_diameter = {}\n",
+    "for sample_type, grains_dict_sample in grains_dicts_smooth_paths.items():\n",
+    "    grains_dicts_feret_diameter[sample_type] = {}\n",
+    "    for grain_index, grain_data in grains_dict_sample.items():\n",
+    "        grain_image = grain_data[\"image\"]\n",
+    "        grain_mask = grain_data[\"predicted_mask\"]\n",
+    "        intersection_labels = grain_data[\"intersection_labels\"]\n",
+    "        p_to_nm = grain_data[\"p_to_nm\"]\n",
+    "        smoothed_path = grain_data[\"smoothed_path\"]\n",
+    "\n",
+    "        grain_mask_dna_only = grain_mask.copy()\n",
+    "        grain_mask_dna_only[grain_mask == 2] = 0\n",
+    "\n",
+    "        # calculate the feret diameter\n",
+    "        feret_diameters = get_feret_from_mask(\n",
+    "            mask_im=grain_mask_dna_only\n",
+    "        )\n",
+    "        min_feret = feret_diameters[\"min_feret\"]\n",
+    "        max_feret = feret_diameters[\"max_feret\"]\n",
+    "\n",
+    "        # save the original grain data\n",
+    "        grains_dicts_feret_diameter[sample_type][grain_index] = grain_data\n",
+    "        # add the feret diameter to the grain data\n",
+    "        grains_dicts_feret_diameter[sample_type][grain_index][\"min_feret\"] = min_feret\n",
+    "        grains_dicts_feret_diameter[sample_type][grain_index][\"max_feret\"] = max_feret"
    ]
   }
  ],
