--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "id": "33031c46",
    "metadata": {},
    "outputs": [],
@@ -24,6 +24,7 @@
     "from topostats.plottingfuncs import Colormap\n",
     "from topostats.tracing.splining import windowTrace\n",
     "from topostats.measure.feret import get_feret_from_mask\n",
+    "from topostats.measure.curvature import discrete_angle_difference_per_nm_linear\n",
     "\n",
     "colormap = Colormap()\n",
     "CMAP = colormap.get_cmap()\n",
@@ -282,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "5cefb1d7",
    "metadata": {},
    "outputs": [],
@@ -302,17 +303,44 @@
     "        grain_mask_dna_only[grain_mask == 2] = 0\n",
     "\n",
     "        # calculate the feret diameter\n",
-    "        feret_diameters = get_feret_from_mask(\n",
-    "            mask_im=grain_mask_dna_only\n",
-    "        )\n",
-    "        min_feret = feret_diameters[\"min_feret\"]\n",
-    "        max_feret = feret_diameters[\"max_feret\"]\n",
+    "        feret_diameters = get_feret_from_mask(mask_im=grain_mask_dna_only)\n",
+    "        min_feret = feret_diameters[\"min_feret\"] * p_to_nm\n",
+    "        max_feret = feret_diameters[\"max_feret\"] * p_to_nm\n",
     "\n",
     "        # save the original grain data\n",
     "        grains_dicts_feret_diameter[sample_type][grain_index] = grain_data\n",
     "        # add the feret diameter to the grain data\n",
     "        grains_dicts_feret_diameter[sample_type][grain_index][\"min_feret\"] = min_feret\n",
     "        grains_dicts_feret_diameter[sample_type][grain_index][\"max_feret\"] = max_feret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "3b898c15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calcuate curvature of the path\n",
+    "grains_dicts_curvature = {}\n",
+    "for sample_type, grains_dict_sample in grains_dicts_feret_diameter.items():\n",
+    "    grains_dicts_curvature[sample_type] = {}\n",
+    "    for grain_index, grain_data in grains_dict_sample.items():\n",
+    "        grain_image = grain_data[\"image\"]\n",
+    "        grain_mask = grain_data[\"predicted_mask\"]\n",
+    "        intersection_labels = grain_data[\"intersection_labels\"]\n",
+    "        p_to_nm = grain_data[\"p_to_nm\"]\n",
+    "        smoothed_path = grain_data[\"smoothed_path\"]\n",
+    "\n",
+    "        # calculate the curvature\n",
+    "        path_curvatures = discrete_angle_difference_per_nm_linear(\n",
+    "            trace_nm=smoothed_path * p_to_nm\n",
+    "        )\n",
+    "\n",
+    "        # save the original grain data\n",
+    "        grains_dicts_curvature[sample_type][grain_index] = grain_data\n",
+    "        # add the curvature to the grain data\n",
+    "        grains_dicts_curvature[sample_type][grain_index][\"curvature\"] = path_curvatures\n"
    ]
   }
  ],
