Change plotting to gridspec from subplots

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -15,6 +15,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
+    "import matplotlib.gridspec as gridspec\n",
     "import seaborn as sns\n",
     "from scipy.ndimage import distance_transform_edt, gaussian_filter1d, binary_fill_holes\n",
     "from skimage.measure import label, regionprops\n",
@@ -98,7 +99,7 @@
     "    plot_paths: list[str] = None,\n",
     "    plot_colour_paths: list[tuple[str, str]] = None,\n",
     "    plot_colour_norm_bounds: tuple[float, float] = (-0.3, 0.3),\n",
-    "    plot_lineplots: list[tuple[str, str, str, str, str]] = None,\n",
+    "    plot_lineplots: list[tuple[str, str, str, str, str, tuple[float, float] | None]] = None,\n",
     "    save_path: Path | None = None,\n",
     "    show_plot: bool = True,\n",
     "    dpi=200,\n",
@@ -106,31 +107,44 @@
     "    \"\"\"plot grains in a grain dictioanry in a grid layout\"\"\"\n",
     "    num_grains = len(grain_dict.keys())\n",
     "    num_rows = num_grains // num_cols + (num_grains % num_cols > 0)\n",
-    "    num_images_per_grain = 2  # image and mask\n",
-    "    if plot_lineplots:\n",
-    "        num_images_per_grain += len(plot_lineplots)\n",
-    "    fig, ax = plt.subplots(\n",
-    "        nrows=num_rows,\n",
-    "        ncols=num_cols * num_images_per_grain,\n",
-    "        figsize=(num_cols * 4, num_rows * 4),\n",
-    "        constrained_layout=True,\n",
-    "        dpi=200,\n",
-    "    )\n",
-    "    for i, (grain_index, grain_data) in enumerate(grain_dict.items()):\n",
+    "    num_inner_rows = 1\n",
+    "    if plot_lineplots is not None:\n",
+    "        num_inner_rows = 1 + len(plot_lineplots)\n",
+    "    num_inner_cols = 2\n",
+    "    fig = plt.figure(figsize=(num_cols * 4, num_rows * 4), dpi=dpi)\n",
+    "    outer = gridspec.GridSpec(nrows=num_rows, ncols=num_cols, wspace=0.1, hspace=0.1)\n",
+    "\n",
+    "    # fig, ax = plt.subplots(\n",
+    "    #     nrows=num_rows,\n",
+    "    #     ncols=num_cols * num_images_per_grain,\n",
+    "    #     figsize=(num_cols * 4, num_rows * 4),\n",
+    "    #     constrained_layout=True,\n",
+    "    #     dpi=200,\n",
+    "    # )\n",
+    "    for inner_index, (grain_index, grain_data) in enumerate(grain_dict.items()):\n",
     "        grain_image = grain_data[\"image\"]\n",
     "        grain_mask = grain_data[\"predicted_mask\"]\n",
     "        grain_p_to_nm = grain_data[\"p_to_nm\"]\n",
     "\n",
-    "        row = i // num_cols\n",
-    "        col = (i % num_cols) * num_images_per_grain\n",
+    "        outer_coords = np.unravel_index(inner_index, (num_rows, num_cols))\n",
     "\n",
-    "        image_ax = ax[row, col]\n",
+    "        inner = gridspec.GridSpecFromSubplotSpec(\n",
+    "            nrows=num_inner_rows,\n",
+    "            ncols=num_inner_cols,\n",
+    "            subplot_spec=outer[outer_coords],\n",
+    "            wspace=0.1,\n",
+    "            hspace=0.1,\n",
+    "        )\n",
+    "\n",
+    "        # plot image\n",
+    "        image_ax = plt.Subplot(fig, inner[0, 0])\n",
     "        image_ax.imshow(grain_image, vmin=vmin, vmax=vmax, cmap=cmap)\n",
     "        image_ax.set_title(f\"Grain {grain_index}\\np_to_nm: {grain_p_to_nm:.2f} nm/px\")\n",
     "        image_ax.axis(\"off\")\n",
+    "        fig.add_subplot(image_ax)\n",
     "\n",
     "        # plot mask\n",
-    "        mask_ax = ax[row, col + 1]\n",
+    "        mask_ax = plt.Subplot(fig, inner[0, 1])\n",
     "        mask_ax.imshow(grain_mask)\n",
     "        # plot paths if present and required\n",
     "        if plot_paths is not None:\n",
@@ -161,22 +175,33 @@
     "                                        linewidth=2,\n",
     "                                    )\n",
     "\n",
+    "        mask_ax.set_title(\"Mask\")\n",
+    "        mask_ax.axis(\"off\")\n",
+    "        fig.add_subplot(mask_ax)\n",
+    "\n",
     "        if plot_lineplots is not None:\n",
     "            for lineplot_index, lineplot_x_y_and_titles in enumerate(plot_lineplots):\n",
-    "                lineplot_ax = ax[row, col + 2 + lineplot_index]\n",
+    "                # bottom row spans all columns\n",
+    "                lineplot_ax = plt.Subplot(fig, inner[1 + lineplot_index, :])\n",
     "                # get the data\n",
-    "                lineplot_x_name, lineplot_y_name, lineplot_xlabel, lineplot_ylabel, lineplot_title = (\n",
-    "                    lineplot_x_y_and_titles\n",
-    "                )\n",
+    "                (\n",
+    "                    lineplot_x_name,\n",
+    "                    lineplot_y_name,\n",
+    "                    lineplot_xlabel,\n",
+    "                    lineplot_ylabel,\n",
+    "                    lineplot_title,\n",
+    "                    lineplot_norm_bounds,\n",
+    "                ) = lineplot_x_y_and_titles\n",
     "                lineplot_x_data = grain_data[lineplot_x_name]\n",
     "                lineplot_y_data = grain_data[lineplot_y_name]\n",
     "                lineplot_ax.plot(lineplot_x_data, lineplot_y_data)\n",
     "                lineplot_ax.set_xlabel(lineplot_xlabel)\n",
     "                lineplot_ax.set_ylabel(lineplot_ylabel)\n",
     "                lineplot_ax.set_title(lineplot_title)\n",
+    "                if lineplot_norm_bounds is not None:\n",
+    "                    lineplot_ax.set_ylim(lineplot_norm_bounds)\n",
     "\n",
-    "        mask_ax.set_title(\"Mask\")\n",
-    "        mask_ax.axis(\"off\")\n",
+    "            fig.add_subplot(lineplot_ax)\n",
     "\n",
     "    if save_path is not None:\n",
     "        # create the parent directory\n",
@@ -198,10 +223,10 @@
    "outputs": [],
    "source": [
     "# plot all grains\n",
-    "if False:\n",
+    "if True:\n",
     "    for sample_type, grain_dict in grains_dicts.items():\n",
     "        print(f\"Plotting grains for sample type [{sample_type}]\")\n",
-    "        plot_all_grains_dictionary(grain_dict, vmin=VMIN, vmax=VMAX, cmap=CMAP)"
+    "        plot_all_grains_dictionary(grain_dict, vmin=VMIN, vmax=VMAX, cmap=CMAP, show_plot=True)"
    ]
   },
   {
@@ -411,7 +436,16 @@
     "        vmax=VMAX,\n",
     "        cmap=CMAP,\n",
     "        plot_colour_paths=[(\"resampled_path_px\", \"curvature\")],\n",
-    "        plot_lineplots=[[\"cumulative_resampled_distances_nm\", \"curvature\", \"distance (nm)\", \"curvature (rad/nm)\", \"Curvature\"]],\n",
+    "        plot_lineplots=[\n",
+    "            [\n",
+    "                \"cumulative_resampled_distances_nm\",\n",
+    "                \"curvature\",\n",
+    "                \"distance (nm)\",\n",
+    "                \"curvature (rad/nm)\",\n",
+    "                \"Curvature\",\n",
+    "                (-0.5, 0.5),\n",
+    "            ]\n",
+    "        ],\n",
     "        save_path=save_dirs[sample_type] / f\"grains_with_curvature_{sample_type}.png\",\n",
     "        show_plot=True,\n",
     "    )"
