make hspace and figsize configurable

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -103,6 +103,9 @@
     "    save_path: Path | None = None,\n",
     "    show_plot: bool = True,\n",
     "    dpi=200,\n",
+    "    figsize_multiplier: float = 4,\n",
+    "    wspace: float = 0.1,\n",
+    "    hspace: float = 0.1,\n",
     ") -> None:\n",
     "    \"\"\"plot grains in a grain dictioanry in a grid layout\"\"\"\n",
     "    num_grains = len(grain_dict.keys())\n",
@@ -111,8 +114,8 @@
     "    if plot_lineplots is not None:\n",
     "        num_inner_rows = 1 + len(plot_lineplots)\n",
     "    num_inner_cols = 2\n",
-    "    fig = plt.figure(figsize=(num_cols * 4, num_rows * 4), dpi=dpi)\n",
-    "    outer = gridspec.GridSpec(nrows=num_rows, ncols=num_cols, wspace=0.1, hspace=0.1)\n",
+    "    fig = plt.figure(figsize=(num_cols * figsize_multiplier, num_rows * figsize_multiplier), dpi=dpi)\n",
+    "    outer = gridspec.GridSpec(nrows=num_rows, ncols=num_cols, wspace=wspace, hspace=hspace)\n",
     "\n",
     "    # fig, ax = plt.subplots(\n",
     "    #     nrows=num_rows,\n",
@@ -448,6 +451,7 @@
     "        ],\n",
     "        save_path=save_dirs[sample_type] / f\"grains_with_curvature_{sample_type}.png\",\n",
     "        show_plot=True,\n",
+    "        figsize_multiplier=5\n",
     "    )"
    ]
   }
