--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -106,9 +106,12 @@
     "    figsize_multiplier: float = 4,\n",
     "    wspace: float = 0.1,\n",
     "    hspace: float = 0.1,\n",
+    "    num_grains_to_limit_to: int | None = None,\n",
     ") -> None:\n",
     "    \"\"\"plot grains in a grain dictioanry in a grid layout\"\"\"\n",
     "    num_grains = len(grain_dict.keys())\n",
+    "    if num_grains_to_limit_to is not None:\n",
+    "        num_grains = min(num_grains, num_grains_to_limit_to)\n",
     "    num_rows = num_grains // num_cols + (num_grains % num_cols > 0)\n",
     "    num_inner_rows = 1\n",
     "    if plot_lineplots is not None:\n",
@@ -117,14 +120,9 @@
     "    fig = plt.figure(figsize=(num_cols * figsize_multiplier, num_rows * figsize_multiplier), dpi=dpi)\n",
     "    outer = gridspec.GridSpec(nrows=num_rows, ncols=num_cols, wspace=wspace, hspace=hspace)\n",
     "\n",
-    "    # fig, ax = plt.subplots(\n",
-    "    #     nrows=num_rows,\n",
-    "    #     ncols=num_cols * num_images_per_grain,\n",
-    "    #     figsize=(num_cols * 4, num_rows * 4),\n",
-    "    #     constrained_layout=True,\n",
-    "    #     dpi=200,\n",
-    "    # )\n",
     "    for inner_index, (grain_index, grain_data) in enumerate(grain_dict.items()):\n",
+    "        if inner_index >= num_grains:\n",
+    "            break\n",
     "        grain_image = grain_data[\"image\"]\n",
     "        grain_mask = grain_data[\"predicted_mask\"]\n",
     "        grain_p_to_nm = grain_data[\"p_to_nm\"]\n",
@@ -135,8 +133,8 @@
     "            nrows=num_inner_rows,\n",
     "            ncols=num_inner_cols,\n",
     "            subplot_spec=outer[outer_coords],\n",
-    "            wspace=0.1,\n",
-    "            hspace=0.1,\n",
+    "            wspace=wspace,\n",
+    "            hspace=hspace,\n",
     "        )\n",
     "\n",
     "        # plot image\n",
@@ -229,7 +227,9 @@
     "if True:\n",
     "    for sample_type, grain_dict in grains_dicts.items():\n",
     "        print(f\"Plotting grains for sample type [{sample_type}]\")\n",
-    "        plot_all_grains_dictionary(grain_dict, vmin=VMIN, vmax=VMAX, cmap=CMAP, show_plot=True)"
+    "        plot_all_grains_dictionary(\n",
+    "            grain_dict, vmin=VMIN, vmax=VMAX, cmap=CMAP, show_plot=True, num_grains_to_limit_to=10, wspace=0, hspace=0, num_cols=5\n",
+    "        )"
    ]
   },
   {
@@ -451,7 +451,9 @@
     "        ],\n",
     "        save_path=save_dirs[sample_type] / f\"grains_with_curvature_{sample_type}.png\",\n",
     "        show_plot=True,\n",
-    "        figsize_multiplier=5\n",
+    "        figsize_multiplier=5,\n",
+    "        num_grains_to_limit_to=10,\n",
+    "        num_cols=5\n",
     "    )"
    ]
   }
