improve defect gap length histogram plotting and split by dose

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -1127,18 +1127,18 @@
    "outputs": [],
    "source": [
     "# get the curvature defect gap lengths\n",
-    "curvature_defect_gap_lengths = get_defect_gap_lengths(\n",
+    "curvature_defect_gap_lengths_all = get_defect_gap_lengths(\n",
     "    df=defect_stats_df,\n",
     "    column_name=\"curvature_defect_gaps_lengths\",\n",
     ")\n",
     "\n",
     "# for each number of gaps, plot the distribution of gap lengths\n",
-    "for num_gaps, gap_lengths in curvature_defect_gap_lengths.items():\n",
+    "for num_gaps, gap_lengths in curvature_defect_gap_lengths_all.items():\n",
     "    print(f\"Number of gaps: {num_gaps}\")\n",
     "    gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
     "\n",
     "    plt.figure()\n",
-    "    sns.histplot(gap_lengths_flat, bins=50, kde=True)\n",
+    "    sns.histplot(gap_lengths_flat, bins=\"auto\", kde=True)\n",
     "    plt.xlabel(\"Gap Length (nm)\")\n",
     "    plt.ylabel(\"Count\")\n",
     "    plt.title(f\"Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\")\n",
@@ -1149,7 +1149,7 @@
     "        # plot the summed gap lengths for each list\n",
     "        summed_gap_lengths = [sum(lengths) for lengths in gap_lengths]\n",
     "        plt.figure()\n",
-    "        sns.histplot(summed_gap_lengths, bins=50, kde=True)\n",
+    "        sns.histplot(summed_gap_lengths, bins=\"auto\", kde=True)\n",
     "        plt.xlabel(\"Summed Gap Length (nm)\")\n",
     "        plt.ylabel(\"Count\")\n",
     "        plt.title(f\"Summed Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(summed_gap_lengths)} num grains: {len(gap_lengths)}\")\n",
@@ -1157,17 +1157,17 @@
     "        plt.show()\n",
     "\n",
     "# get the height defect gap lengths\n",
-    "height_defect_gap_lengths = get_defect_gap_lengths(\n",
+    "height_defect_gap_lengths_all = get_defect_gap_lengths(\n",
     "    df=defect_stats_df,\n",
     "    column_name=\"height_defect_gaps_lengths\",\n",
     ")\n",
     "\n",
     "# for each number of gaps, plot the distribution of gap lengths\n",
-    "for num_gaps, gap_lengths in height_defect_gap_lengths.items():\n",
+    "for num_gaps, gap_lengths in height_defect_gap_lengths_all.items():\n",
     "    print(f\"Number of gaps: {num_gaps}\")\n",
     "    gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
     "    plt.figure()\n",
-    "    sns.histplot(gap_lengths_flat, bins=50, kde=True)\n",
+    "    sns.histplot(gap_lengths_flat, bins=\"auto\", kde=True)\n",
     "    plt.xlabel(\"Gap Length (nm)\")\n",
     "    plt.ylabel(\"Count\")\n",
     "    plt.title(f\"Height Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\")\n",
@@ -1178,12 +1178,55 @@
     "        # plot the summed gap lengths for each list\n",
     "        summed_gap_lengths = [sum(lengths) for lengths in gap_lengths]\n",
     "        plt.figure()\n",
-    "        sns.histplot(summed_gap_lengths, bins=50, kde=True)\n",
+    "        sns.histplot(summed_gap_lengths, bins=\"auto\", kde=True)\n",
     "        plt.xlabel(\"Summed Gap Length (nm)\")\n",
     "        plt.ylabel(\"Count\")\n",
     "        plt.title(f\"Summed Height Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(summed_gap_lengths)} num grains: {len(gap_lengths)}\")\n",
     "        plt.xlim(0, 700)\n",
-    "        plt.show()\n"
+    "        plt.show()\n",
+    "\n",
+    "# curvature and height defect gap lengths per dose\n",
+    "for dose in defect_stats_df[\"dose\"].unique():\n",
+    "    print(f\"Dose: {dose}\")\n",
+    "    dose_df = defect_stats_df[defect_stats_df[\"dose\"] == dose]\n",
+    "    # height defect gap lengths\n",
+    "    height_defect_gap_lengths_dose = get_defect_gap_lengths(\n",
+    "        df=dose_df,\n",
+    "        column_name=\"height_defect_gaps_lengths\",\n",
+    "    )\n",
+    "    for num_gaps, gap_lengths in height_defect_gap_lengths_dose.items():\n",
+    "        print(f\"Number of gaps: {num_gaps}\")\n",
+    "        gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
+    "        plt.figure()\n",
+    "        sns.histplot(gap_lengths_flat, bins=\"auto\", kde=True)\n",
+    "        plt.xlabel(\"Gap Length (nm)\")\n",
+    "        plt.ylabel(\"Count\")\n",
+    "        plt.title(\n",
+    "            f\"Height Defect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\"\n",
+    "        )\n",
+    "        plt.xlim(0, 700)\n",
+    "        plt.show()\n",
+    "    # curvature defect gap lengths\n",
+    "    curvature_defect_gap_lengths_dose = get_defect_gap_lengths(\n",
+    "        df=dose_df,\n",
+    "        column_name=\"curvature_defect_gaps_lengths\",\n",
+    "    )\n",
+    "    for num_gaps, gap_lengths in curvature_defect_gap_lengths_dose.items():\n",
+    "        print(f\"Number of gaps: {num_gaps}\")\n",
+    "        gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
+    "        plt.figure()\n",
+    "        sns.histplot(gap_lengths_flat, bins=\"auto\", kde=True)\n",
+    "        plt.xlabel(\"Gap Length (nm)\")\n",
+    "        plt.ylabel(\"Count\")\n",
+    "        plt.title(\n",
+    "            f\"Curvature Defect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\"\n",
+    "        )\n",
+    "        plt.xlim(0, 700)\n",
+    "        plt.show()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
