functionalise histogram plotting

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -1169,6 +1169,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0d4c1708",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_stripviolinplot_list(\n",
+    "    data: list,\n",
+    "    ylabel: str = \"\",\n",
+    "    xlabel: str = \"\",\n",
+    "    title: str = \"\",\n",
+    ") -> None:\n",
+    "    \"\"\"Plot a strip and violin plot for a list of data.\"\"\"\n",
+    "    plt.figure()\n",
+    "    sns.stripplot(data=data, color=\"black\", alpha=0.5)\n",
+    "    sns.violinplot(data=data, color=\"lightgrey\")\n",
+    "    plt.ylabel(ylabel)\n",
+    "    plt.xlabel(xlabel)\n",
+    "    plt.title(title)\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "def plot_hist_list(\n",
+    "    data: list,\n",
+    "    xlabel: str = \"\",\n",
+    "    ylabel: str = \"\",\n",
+    "    title: str = \"\",\n",
+    "    bins: int | str = \"auto\",\n",
+    "    xlim: tuple[float, float] | None = None,\n",
+    "    kde: bool = True,\n",
+    ") -> None:\n",
+    "    \"\"\"Plot a histogram for a list of data.\"\"\"\n",
+    "    plt.figure()\n",
+    "    sns.histplot(data, bins=bins, kde=kde)\n",
+    "    plt.xlabel(xlabel)\n",
+    "    plt.ylabel(ylabel)\n",
+    "    plt.title(title)\n",
+    "    if xlim is not None:\n",
+    "        plt.xlim(xlim)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3a46a434",
    "metadata": {},
    "outputs": [],
@@ -1185,28 +1228,25 @@
     "    print(f\"Number of gaps: {num_gaps}\")\n",
     "    gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
     "\n",
-    "    plt.figure()\n",
-    "    sns.histplot(gap_lengths_flat, bins=\"auto\", kde=True)\n",
-    "    plt.xlabel(\"Gap Length (nm)\")\n",
-    "    plt.ylabel(\"Count\")\n",
-    "    plt.title(\n",
-    "        f\"Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\"\n",
+    "    plot_hist_list(\n",
+    "        data=gap_lengths_flat,\n",
+    "        xlabel=\"Gap Length (nm)\",\n",
+    "        ylabel=\"Count\",\n",
+    "        title=f\"Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
+    "        xlim=(0, 700),\n",
     "    )\n",
-    "    plt.xlim(0, 700)\n",
-    "    plt.show()\n",
     "\n",
     "    if num_gaps > 1:\n",
     "        # plot the summed gap lengths for each list\n",
     "        summed_gap_lengths = [sum(lengths) for lengths in gap_lengths]\n",
-    "        plt.figure()\n",
-    "        sns.histplot(summed_gap_lengths, bins=\"auto\", kde=True)\n",
-    "        plt.xlabel(\"Summed Gap Length (nm)\")\n",
-    "        plt.ylabel(\"Count\")\n",
-    "        plt.title(\n",
-    "            f\"Summed Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(summed_gap_lengths)} num grains: {len(gap_lengths)}\"\n",
+    "\n",
+    "        plot_hist_list(\n",
+    "            data=summed_gap_lengths,\n",
+    "            xlabel=\"Summed Gap Length (nm)\",\n",
+    "            ylabel=\"Count\",\n",
+    "            title=f\"Summed Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(summed_gap_lengths)}, num grains: {len(gap_lengths)}\",\n",
+    "            xlim=(0, 700),\n",
     "        )\n",
-    "        plt.xlim(0, 700)\n",
-    "        plt.show()\n",
     "\n",
     "# get the height defect gap lengths\n",
     "height_defect_gap_lengths_all = get_defect_gap_lengths(\n",
@@ -1218,28 +1258,25 @@
     "for num_gaps, gap_lengths in height_defect_gap_lengths_all.items():\n",
     "    print(f\"Number of gaps: {num_gaps}\")\n",
     "    gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
-    "    plt.figure()\n",
-    "    sns.histplot(gap_lengths_flat, bins=\"auto\", kde=True)\n",
-    "    plt.xlabel(\"Gap Length (nm)\")\n",
-    "    plt.ylabel(\"Count\")\n",
-    "    plt.title(\n",
-    "        f\"Height Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\"\n",
+    "\n",
+    "    plot_hist_list(\n",
+    "        data=gap_lengths_flat,\n",
+    "        xlabel=\"Gap Length (nm)\",\n",
+    "        ylabel=\"Count\",\n",
+    "        title=f\"Height Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
+    "        xlim=(0, 700),\n",
     "    )\n",
-    "    plt.xlim(0, 700)\n",
-    "    plt.show()\n",
     "\n",
     "    if num_gaps > 1:\n",
     "        # plot the summed gap lengths for each list\n",
     "        summed_gap_lengths = [sum(lengths) for lengths in gap_lengths]\n",
-    "        plt.figure()\n",
-    "        sns.histplot(summed_gap_lengths, bins=\"auto\", kde=True)\n",
-    "        plt.xlabel(\"Summed Gap Length (nm)\")\n",
-    "        plt.ylabel(\"Count\")\n",
-    "        plt.title(\n",
-    "            f\"Summed Height Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(summed_gap_lengths)} num grains: {len(gap_lengths)}\"\n",
+    "        plot_hist_list(\n",
+    "            data=summed_gap_lengths,\n",
+    "            xlabel=\"Summed Gap Length (nm)\",\n",
+    "            ylabel=\"Count\",\n",
+    "            title=f\"Summed Height Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(summed_gap_lengths)}, num grains: {len(gap_lengths)}\",\n",
+    "            xlim=(0, 700),\n",
     "        )\n",
-    "        plt.xlim(0, 700)\n",
-    "        plt.show()\n",
     "\n",
     "# ================== curvature and height defect gap lengths per dose\n",
     "print(\"###\\n###\\n### PER DOSE DIRECT ###\\n###\\n###\")\n",
@@ -1254,15 +1291,15 @@
     "    for num_gaps, gap_lengths in height_defect_gap_lengths_dose.items():\n",
     "        print(f\"Number of gaps: {num_gaps}\")\n",
     "        gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
-    "        plt.figure()\n",
-    "        sns.histplot(gap_lengths_flat, bins=\"auto\", kde=True)\n",
-    "        plt.xlabel(\"Gap Length (nm)\")\n",
-    "        plt.ylabel(\"Count\")\n",
-    "        plt.title(\n",
-    "            f\"Height Defect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\"\n",
+    "\n",
+    "        plot_hist_list(\n",
+    "            data=gap_lengths_flat,\n",
+    "            xlabel=\"Gap Length (nm)\",\n",
+    "            ylabel=\"Count\",\n",
+    "            title=f\"Height Defect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
+    "            xlim=(0, 700),\n",
     "        )\n",
-    "        plt.xlim(0, 700)\n",
-    "        plt.show()\n",
+    "\n",
     "    # curvature defect gap lengths\n",
     "    curvature_defect_gap_lengths_dose = get_defect_gap_lengths(\n",
     "        df=dose_df,\n",
@@ -1271,15 +1308,13 @@
     "    for num_gaps, gap_lengths in curvature_defect_gap_lengths_dose.items():\n",
     "        print(f\"Number of gaps: {num_gaps}\")\n",
     "        gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
-    "        plt.figure()\n",
-    "        sns.histplot(gap_lengths_flat, bins=\"auto\", kde=True)\n",
-    "        plt.xlabel(\"Gap Length (nm)\")\n",
-    "        plt.ylabel(\"Count\")\n",
-    "        plt.title(\n",
-    "            f\"Curvature Defect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\"\n",
+    "        plot_hist_list(\n",
+    "            data=gap_lengths_flat,\n",
+    "            xlabel=\"Gap Length (nm)\",\n",
+    "            ylabel=\"Count\",\n",
+    "            title=f\"Curvature Defect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
+    "            xlim=(0, 700),\n",
     "        )\n",
-    "        plt.xlim(0, 700)\n",
-    "        plt.show()\n",
     "\n",
     "print(\"###\\n###\\n### ALL TOGETHER INDIRECT ###\\n###\\n###\")\n",
     "\n",
@@ -1294,15 +1329,13 @@
     "    print(f\"Number of indirect gaps: {num_gaps}\")\n",
     "    gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
     "\n",
-    "    plt.figure()\n",
-    "    sns.histplot(gap_lengths_flat, bins=\"auto\", kde=True)\n",
-    "    plt.xlabel(\"Indirect Gap Length (nm)\")\n",
-    "    plt.ylabel(\"Count\")\n",
-    "    plt.title(\n",
-    "        f\"Curvature Defect Indirect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\"\n",
+    "    plot_hist_list(\n",
+    "        data=gap_lengths_flat,\n",
+    "        xlabel=\"Indirect Gap Length (nm)\",\n",
+    "        ylabel=\"Count\",\n",
+    "        title=f\"Curvature Defect Indirect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
+    "        xlim=(0, 700),\n",
     "    )\n",
-    "    plt.xlim(0, 700)\n",
-    "    plt.show()\n",
     "\n",
     "# height\n",
     "height_defect_indirect_gap_lengths_all = get_defect_gap_lengths(\n",
@@ -1314,15 +1347,14 @@
     "for num_gaps, gap_lengths in height_defect_indirect_gap_lengths_all.items():\n",
     "    print(f\"Number of indirect gaps: {num_gaps}\")\n",
     "    gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
-    "    plt.figure()\n",
-    "    sns.histplot(gap_lengths_flat, bins=\"auto\", kde=True)\n",
-    "    plt.xlabel(\"Indirect Gap Length (nm)\")\n",
-    "    plt.ylabel(\"Count\")\n",
-    "    plt.title(\n",
-    "        f\"Height Defect Indirect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\"\n",
+    "\n",
+    "    plot_hist_list(\n",
+    "        data=gap_lengths_flat,\n",
+    "        xlabel=\"Indirect Gap Length (nm)\",\n",
+    "        ylabel=\"Count\",\n",
+    "        title=f\"Height Defect Indirect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
+    "        xlim=(0, 700),\n",
     "    )\n",
-    "    plt.xlim(0, 700)\n",
-    "    plt.show()\n",
     "\n",
     "# ================== per dose\n",
     "print(\"###\\n###\\n### PER DOSE INDIRECT ###\\n###\\n###\")\n",
@@ -1337,15 +1369,13 @@
     "    for num_gaps, gap_lengths in height_defect_indirect_gap_lengths_dose.items():\n",
     "        print(f\"Number of indirect gaps: {num_gaps}\")\n",
     "        gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
-    "        plt.figure()\n",
-    "        sns.histplot(gap_lengths_flat, bins=\"auto\", kde=True)\n",
-    "        plt.xlabel(\"Indirect Gap Length (nm)\")\n",
-    "        plt.ylabel(\"Count\")\n",
-    "        plt.title(\n",
-    "            f\"Height Defect Indirect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\"\n",
+    "        plot_hist_list(\n",
+    "            data=gap_lengths_flat,\n",
+    "            xlabel=\"Indirect Gap Length (nm)\",\n",
+    "            ylabel=\"Count\",\n",
+    "            title=f\"Height Defect Indirect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
+    "            xlim=(0, 700),\n",
     "        )\n",
-    "        plt.xlim(0, 700)\n",
-    "        plt.show()\n",
     "    # curvature defect indirect gap lengths\n",
     "    curvature_defect_indirect_gap_lengths_dose = get_defect_gap_lengths(\n",
     "        df=dose_df,\n",
@@ -1354,15 +1384,13 @@
     "    for num_gaps, gap_lengths in curvature_defect_indirect_gap_lengths_dose.items():\n",
     "        print(f\"Number of indirect gaps: {num_gaps}\")\n",
     "        gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
-    "        plt.figure()\n",
-    "        sns.histplot(gap_lengths_flat, bins=\"auto\", kde=True)\n",
-    "        plt.xlabel(\"Indirect Gap Length (nm)\")\n",
-    "        plt.ylabel(\"Count\")\n",
-    "        plt.title(\n",
-    "            f\"Curvature Defect Indirect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\"\n",
-    "        )\n",
-    "        plt.xlim(0, 700)\n",
-    "        plt.show()"
+    "        plot_hist_list(\n",
+    "            data=gap_lengths_flat,\n",
+    "            xlabel=\"Indirect Gap Length (nm)\",\n",
+    "            ylabel=\"Count\",\n",
+    "            title=f\"Curvature Defect Indirect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
+    "            xlim=(0, 700),\n",
+    "        )"
    ]
   }
  ],
